# jk

./: Cargo.toml  README.md  tailwind.config.js
.github/workflows/: release.yml
src/: console_ui.rs  consts.rs  main.rs  utils.rs  web.rs
templates/: file_info.html  file_list.html  index.html
