[package]
name = "kk"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = "0.26.3"

tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = {version="0.7.0", features = ["ws"]}
futures = "0.3"
